css/style.css
/* ... */
body
{
	background-image: url("../images/skytree_atmosphere_seamless.jpg");
	color: white;
	text-shadow: .05rem .05rem .1rem black;
	font-family: 'Open Sans', 'SourceSansPro', 'Verdana', 'Arial', sans-serif;
	font-size: 1.0rem;
	line-height: 1.2rem;
	margin: 0;
}

div#wrapper
{
	height: 100%;
	overflow: hidden;
	width: 100%;
	position: relative; /* To be reference for absolute pos of child. */
}

header
{
	z-index: 99999;
	position: relative;
}

section
{
	background-position: center center;
	background-repeat: no-repeat;
	background-size: 55%;
	min-height: 60rem;
	z-index: 1000;
}

section:nth-of-type(2n+1)
{
	background-color: rgba(255,255,255, .5);
	background-color: rgba(100,200,255, .5);
	background-position: center center;
}
section:nth-of-type(2n+1)
,section:nth-of-type(2n+1) a
{
	color: black;
	text-shadow: .02rem .02rem .01rem white;
}

section:nth-of-type(2n)
{
	background-position: center center;
	background-size: auto 155%;
	border-top: .05rem solid #AAA;
	background-color: rgba(0,0,0, .5);
	background-color: rgba(255,175,255, .5);
}
section:nth-of-type(2n)
,section:nth-of-type(2n) a
{
	color: white;
	text-shadow: 1px 1px 1px black;
}

section:last-of-type
{
	background-color: transparent;
}

figure
{
	margin-left: 0;
}

div h2 + p:before
{
	content: "⇡";
}
div h2 + p
{
	z-index: 1001;
	position: absolute;
	top: 2.1rem;
	right: -14rem;
	width: 5rem;
	height: 5rem;
	background: transparent url("");
}

.loader_bar_horizontal {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: .2rem;
	z-index: 100;
	background-color: rgb(2, 2, 2);
}

.container
{
	margin: auto;
	overflow: hidden;
	padding: 0;
	text-align: center;
	width: 80%;
}

.row
{
	margin-bottom: 2.31rem;
}

h1
{
	color: white;
	font-size: 3rem;
	line-height: 2.5rem;
	text-align: center;
	font-weight: normal;
	text-shadow: .05rem .05rem .1rem black;
}

h1::before
,h1::after
{
	background-repeat: no-repeat;
	content: "";
	display: inline-block;
	height: 64px;
	position: relative;
	top: 14px;
	width: 32px;
}
h1::before
{
	background-image: url('../images/unicorn_mini_black.png');
}
h1::after
{
	background-image: url('../images/unicorn_mini_white.png');
}

h3
{
	font-size: 2rem;
	color: royalblue;
	font-weight:300;
}

ul
, ol
{
	padding: 0;
	margin: 0 0 0 0;
}

p
{
	font-weight: 400;
}

li, a, img
{
	outline: none !important;
}

.section-title {
	font-family: 'NovecentowideBookBold';
	font-size: 50px;
	line-height: 50px;
	margin-bottom: 40px;
	font-weight: normal;
}
.border {
	border-top: 1px solid #f0f0f0;
	padding-top: 20px;
}
a {
	color: #dde;
}
a:hover {
	text-decoration: underline;
	color: #fff;
}
#footer,
footer {
	margin-bottom: 0;
	background-color: royalblue;
	background-color: rgb(0, 0, 0);
	filter: alpha(opacity=50);
	opacity: .5;
	padding: 15px 0;
	color: #fff;
	font-size: 1rem;
	font-family:  'NovecentowideLightRegular';
}
#footer a,
footer a {
	color:#fff;
	text-decoration:underline;
}
#footer img,
footer img {
		max-height: 50pt;
}
input, textarea {
	border-radius: 0;
}

span.arrow {
	display:block;
	background:url(img/arrow.png) no-repeat;
	width:18px;
	height:9px;
	margin-left:-9px;
	position:absolute;
	bottom:20px;
	left:50%;
	z-index: 3;
}



/* ------------------------------------------------------------------
 Menu
 */
#manual_menu
,#main-nav
{
	font-size: 1.2rem;
	font-weight: 10;
	z-index: 1002;
	font-variant: small-caps;
	/*
	margin-left: -150pt;
	left: 50%;
	*/
}
#manual_menu li,
#main-nav li {
	border-radius: 1rem;
	display: inline-block;
	padding: .4rem;
	position: absolute;
	width: 20%;
	text-align: center;
	background-color: darkorange;
}
#main-nav li:nth-child(5n+1) {
	background-color: royalblue;
}
#main-nav li:nth-child(5n+2) {
	background-color: ;
}
#main-nav li:nth-child(5n+3) {
	background-color: tan;
}
#main-nav li:nth-child(5n+4) {
	background-color: goldenrod;
}
#main-nav li:nth-child(5n+4) {
	background-color: purple;
}
#main-nav li.current
{
	top: .5rem;
	left: 0;
	margin-left: 0;
	margin-top: 0;
	position: fixed;
	height: 1rem;
	background: none;
}

#manual_menu li a,
#main-nav li a {
	color: rgb(0, 0, 0);
	text-shadow: 0px 0px 0px white;
	text-decoration: none;
	-webkit-transition: color 0.5s ease;
	-moz-transition: color 0.5s ease;
	-o-transition: color 0.5s ease;
	transition: color 0.5s ease;
}

#manual_menu li:hover a,
#main-nav li:hover a
{
	color: white;
	text-shadow: 1px 1px 1px black;
}
#main-nav li a {
	color: white;
}
#main-nav li+li+li a {
	color: white;
}

#main-nav li  ul {
	display: none;
	position: relative;
	top: 15pt;
	margin-left: -100pt;
}
/*
#manual_menu li {
	border-bottom: .1rem solid red;
}
#manual_menu li+li {
	border-bottom: .1rem solid orange;
}
#manual_menu li+li+li {
	border-bottom: .1rem solid olive;
}
#manual_menu li+li+li+li {
	border-bottom: .1rem solid lightblue;
}
#manual_menu li+li+li+li+li {
	border-bottom: .1rem solid magenta;
}
*/
#manual_menu li a {
	-moz-text-decoration-color: red;
	text-decoration-color: red;
}
#manual_menu li+li a {
	-moz-text-decoration-color: orange;
	text-decoration-color: orange;
}
#manual_menu li+li+li a {
	-moz-text-decoration-color: olive;
	text-decoration-color: olive;
}
#manual_menu li+li+li+li a {
	-moz-text-decoration-color: lightblue;
	text-decoration-color: lightblue;
}
#manual_menu li+li+li+li+li a {
	-moz-text-decoration-color: magenta;
	text-decoration-color: magenta;
}

#manual_menu li.active + li ul,
#main-nav li.active + li ul,
.nav_ul li.current + li ul
{
	display: inline;
}
#manual_menu li.current,
#manual_menu li:hover,
#manual_menu li.active,
#main-nav li.current,
#main-nav li:hover,
#main-nav li.active
{
	color: rgb(255,255,255);
}

#manual_menu li:target,
#manual_menu li::target,
#main-nav li:target,
#main-nav li::target
{
	color: #fff;
	background-color: rgba(0,0,0, .5);
	border: .1rem solid white;
}
.navbar .nav {
	float: right;
}
/* ... */

